--- a/index.html
+++ b/index.html
@@ -1,173 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Void Invaders: Galactic Grind</title>
-    <style>
-        body { background: #000; color: #0f0; font-family: 'Courier New', monospace; text-align: center; margin: 0; padding: 0; overflow: hidden; touch-action: none; }
-        h1 { text-shadow: 0 0 10px #0f0; animation: glow 2s infinite; }
-        @keyframes glow { 0%,100%{text-shadow:0 0 5px #0f0;} 50%{text-shadow:0 0 20px #0f0;} }
-        canvas { border: 2px solid #0f0; background: #111; display: block; margin: 0 auto; width: 100%; height: calc(100vh - 60px); touch-action: none; }
-        #controls { display: flex; justify-content: center; flex-wrap: wrap; gap: 5px; margin: 10px; position: absolute; z-index: 10; width: 100%; }
-        button { background: #000; color: #0f0; border: 1px solid #0f0; padding: 5px 10px; cursor: pointer; font-family: inherit; }
-        button:hover, button:disabled { background: #0f0; color: #000; }
-        button:disabled { opacity: 0.5; cursor: not-allowed; }
-        #status { font-size: 12px; position: absolute; top: 10px; left: 10px; z-index: 10; }
-        #ticker { position: absolute; top: 0; left: 0; width: 100%; background: rgba(0,255,0,0.1); font-size: 10px; white-space: nowrap; animation: scroll 20s linear infinite; z-index: 10; }
-        @keyframes scroll { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
-        .shard-display { display: inline-block; margin: 2px; padding: 2px 5px; background: #111; border: 1px solid #0f0; }
-        #viewsTicker { position: absolute; bottom: 0; left: 0; width: 100%; background: rgba(0,0,0,0.5); color: #0f0; font-size: 10px; text-align: center; padding: 5px; z-index: 10; }
-        #pvpModal { position: absolute; top: 20%; left: 10%; width: 80%; background: #111; padding: 20px; border: 2px solid #0f0; z-index: 20; display: none; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<title>Void Invaders</title>
+<style>
+  body{margin:0;background:#000;color:#0f0;font-family:courier new;overflow:hidden}
+  canvas{display:block;width:100vw;height:100vh;background:#001}
+  #connect{position:absolute;top:20px;left:50%;transform:translateX(-50%);z-index:99;padding:15px 30px;font-size:18px;background:#000;border:2px solid #0f0;color:#0f0}
+  #status{position:absolute;top:70px;left:50%;transform:translateX(-50%);z-index:99}
+</style>
 </head>
 <body>
-    <div id="ticker">$WAY4OUT: $0.0012 ↑2% | $COIN4: $0.0045 ↑15% | $TR3B: $0.0008 ↓1% | Grind to Mine!</div>
-    <h1>Void Invaders: Galactic Grind</h1>
-    <p>Defend the void, mine shards, redeem for $WAY4OUT/$COIN4/$TR3B on Base!</p>
-    <button id="connectWallet">Connect Wallet</button>
-    <p id="walletStatus">Wallet: Disconnected</p>
-    <div id="controls">
-        <button id="claimAirdrop">Claim Airdrop</button>
-        <button id="mintNFT">Mint Bunker NFT</button>
-        <button id="equipNFT">Equip NFT</button>
-        <button id="upgradeCoin4">Quad Boost ($COIN4 x1)</button>
-        <button id="escapeWay4">Warp Escape ($WAY4OUT x1)</button>
-        <button id="scanTr3b">Oracle Scan ($TR3B x1)</button>
-        <button id="redeemWay4">Redeem $WAY4OUT</button>
-        <button id="redeemCoin4">Redeem $COIN4</button>
-        <button id="redeemTr3b">Redeem $TR3B</button>
-        <button id="buyWay4out">Buy $WAY4OUT</button>
-        <button id="buyCoin4">Buy $COIN4</button>
-        <button id="buyTr3b">Buy $TR3B</button>
-        <button id="watchAd">Watch Ad for Boost</button>
-        <button id="fullScreen">Full Screen</button>
-        <button id="toggleMusic">Music On/Off</button>
-        <button id="startPVP">Start PVP</button>
-    </div>
-    <canvas id="gameCanvas"></canvas>
-    <div id="status">
-        <span class="shard-display">Score: <span id="score">0</span></span>
-        <span class="shard-display">$WAY4OUT: <span id="way4Shards">0</span></span>
-        <span class="shard-display">$COIN4: <span id="coin4Shards">0</span></span>
-        <span class="shard-display">$TR3B: <span id="tr3bShards">0</span></span>
-        <span class="shard-display">Wave: <span id="wave">1</span></span>
-    </div>
-    <div id="viewsTicker">Total Views: <span id="viewsCount">0</span></div>
-    <div id="pvpModal">
-        <h2>PVP Mode</h2>
-        <input id="roomCode" type="text" placeholder="Room Code">
-        <button id="joinPVP">Join</button>
-        <button id="createPVP">Create</button>
-        <button id="closePVP">Close</button>
-    </div>
-    <audio id="bgMusic" loop>
-        <source src="data:audio/wav;base64,UklGRnoGAABXQVZFZm10IBAAAAABAAEAQB8AAEAfAAABAAgAZGF0YQoGAACBhYqFbF1fdJivrJBhNjVgodDbq2EcBj+a2/LDciUFLI9ErK+9gA=" type="audio/wav">
-    </audio>
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-    <script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
-    <script>
-        let web3, account, provider, peer, conn;
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-        let invaders = [], bullets = [], invaderBullets = [], barriers = [], particles = [], powerUps = [];
-        let keys = {}, touchX = 0, touchY = 0, touchActive = false, music = document.getElementById('bgMusic'), musicPlaying = false;
-        let audioCtx, nextDrop = 'WAY4OUT';
 
-        // Views Ticker (LocalStorage, +1 per session)
-        let views = parseInt(localStorage.getItem('voidViews') || '0') + 1;
-        localStorage.setItem('voidViews', views.toString());
-        document.getElementById('viewsCount').textContent = views;
+<button id="connect">CONNECT WALLET – WORKS EVERYWHERE</button>
+<div id="status">Wallet: not connected</div>
+<canvas id="c"></canvas>
 
-        // Resize Canvas (Auto-Adapt to Mobile)
-        function resizeCanvas() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight - 60;
-        }
-        window.addEventListener('resize', resizeCanvas);
-        resizeCanvas();
+<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+<script>
+  const status = document.getElementById('status');
+  const btn = document.getElementById('connect');
 
-        // Wallet Connect (Seamless on Any Device – MetaMask, WalletConnect Fallback)
-        async function connectWallet() {
-            if (window.ethereum) {
-                provider = window.ethereum;
-                try {
-                    await provider.request({ method: 'eth_requestAccounts' });
-                } catch (err) {
-                    return alert('Connect failed: ' + err.message);
-                }
-            } else {
-                provider = new WalletConnectProvider({
-                    rpc: { 8453: "https://mainnet.base.org" },
-                });
-                try {
-                    await provider.enable();
-                } catch (err) {
-                    return alert('Connect failed: ' + err.message);
-                }
-            }
-            web3 = new Web3(provider);
-            account = (await web3.eth.getAccounts())[0];
-            document.getElementById('walletStatus').textContent = `Wallet: ${account.slice(0,6)}...${account.slice(-4)}`;
-            document.getElementById('connectWallet').disabled = true;
-            // Switch to Base
-            try {
-                await provider.request({ method: 'wallet_switchEthereumChain', params: [{ chainId: '0x2105' }] });
-            } catch (err) {
-                if (err.code === 4902) {
-                    await provider.request({ method: 'wallet_addEthereumChain', params: [{
-                        chainId: '0x2105', chainName: 'Base', rpcUrls: ['https://mainnet.base.org'],
-                        nativeCurrency: { name: 'ETH', symbol: 'ETH', decimals: 18 },
-                        blockExplorerUrls: ['https://basescan.org']
-                    }]});
-                }
-            }
-            loadContracts();
-        }
-        document.getElementById('connectWallet').onclick = connectWallet;
+  async function connect() {
+    let provider;
+    if (window.ethereum) {
+      provider = window.ethereum;
+      try { await provider.request({ method: 'eth_requestAccounts' }); }
+      catch { status.textContent = 'User rejected'; return; }
+    } else {
+      provider = new WalletConnectProvider({ rpc: { 8453: "https://mainnet.base.org" } });
+      await provider.enable();
+    }
 
-        // NFT Minting
-        async function mintNFT() {
-            if (!account) return alert('Connect wallet!');
-            try {
-                const tokenId = Date.now();
-                await contracts.ZORA.methods.safeMint(account, tokenId).send({ from: account, value: web3.utils.toWei('0.001', 'ether') });
-                alert('Bunker NFT minted!');
-            } catch (err) { alert('Mint failed: ' + err.message); }
-        }
-        document.getElementById('mintNFT').onclick = mintNFT;
+    const web3 = new Web3(provider);
+    const accounts = await web3.eth.getAccounts();
+    const acc = accounts[0];
 
-        // PVP Multiplayer (P2P Co-op)
-        buttons.startPVP.onclick = () => document.getElementById('pvpModal').style.display = 'block';
-        document.getElementById('closePVP').onclick = () => document.getElementById('pvpModal').style.display = 'none';
-        document.getElementById('createPVP').onclick = () => {
-            peer = new Peer();
-            peer.on('open', id => {
-                alert('Share room: ' + id);
-                document.getElementById('pvpModal').style.display = 'none';
-            });
-            peer.on('connection', c => {
-                conn = c;
-                conn.on('data', d => { /* Sync data, e.g., player pos */ });
-            });
-        };
-        document.getElementById('joinPVP').onclick = () => {
-            const room = document.getElementById('roomCode').value;
-            peer = new Peer();
-            conn = peer.connect(room);
-            conn.on('open', () => {
-                alert('Joined PVP!');
-                document.getElementById('pvpModal').style.display = 'none';
-            });
-            conn.on('data', d => { /* Sync data */ });
-        };
+    // force Base
+    try {
+      await provider.request({ method: 'wallet_switchEthereumChain', params: [{ chainId: '0x2105' }] });
+    } catch (e) {
+      await provider.request({ method: 'wallet_addEthereumChain', params: [{
+        chainId: '0x2105', chainName: 'Base', rpcUrls: ['https://mainnet.base.org'],
+        nativeCurrency: { name: 'ETH', symbol: 'ETH', decimals: 18 },
+        blockExplorerUrls: ['https://basescan.org']
+      }]});
+    }
 
-        // Game Logic (Stub – replace with full for production)
-        function init() {
-            // Your full game init, invaders, etc.
-        }
-        init();
-    </script>
+    status.textContent = `Connected: ${acc.slice(0,6)}...${acc.slice(-4)}`;
+    btn.textContent = "WALLET CONNECTED";
+    btn.disabled = true;
+  }
+
+  btn.onclick = connect;
+
+  // tiny demo so you see canvas works
+  const c = document.getElementById('c');
+  const ctx = c.getContext('2d');
+  function resize(){c.width=innerWidth;c.height=innerHeight;}
+  resize(); window.onresize=resize;
+  let x = c.width/2;
+  c.ontouchmove = e => x = e.touches[0].clientX;
+  function loop(){
+    ctx.fillStyle='#000'; ctx.fillRect(0,0,c.width,c.height);
+    ctx.fillStyle='#0f0'; ctx.fillRect(x-30,c.height-80,60,60);
+    requestAnimationFrame(loop);
+  }
+  loop();
+</script>
 </body>
 </html>
